# picam_frontend

./: CMakeLists.txt  README.md  config.ini
debian/: changelog  conffiles  control  debhelper-build-stamp  files  picam-frontend.postrm.debhelper  picam-frontend.service  postrm  prerm  rules
debian/picam-frontend/DEBIAN/: conffiles  control  md5sums  postinst
debian/picam-frontend/usr/share/doc/picam-frontend/: copyright
debian/picam-frontend/usr/share/picam-frontend/web/: index.html
src/: main.cpp
web/: index.html
